gl33-master/src/test/deca/syntax/valid/others/testWhile.deca
/*
Test sur la structure while. Suppose que les int, print
, les additions fonctionnent correctement

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/valid/others/expected

Author : Tanguy Poinson
Date : 17/01/2021
*/

{
    int a = 0;

    while(a <= 1) {
        println("Valeur de a : ", a);
        a = a + 1;
    }
}